fix: lightmode revamp for better contrast

--- a/public/theme.css
+++ b/public/theme.css
@@ -71,20 +71,11 @@
 	--background-dark: #f3f3f3;
 	--background-dark-hover: #e4e4e4;
 
-	/* --background: #dfdfdf;
-	--background-hover: #dadada; */
-
   --background: #dfdfdf;
-  --background-hover: #d1d1d1;
-
-	/* --foreground: #bebebe;
-	--foreground-hover: #aaaaaa; */
+  --background-hover: #d9d9d9;
 
   --foreground: #cfcfcf;
   --foreground-hover: #c1c1c1;
-	
-	/* --foreground-light: #949494;
-	--foreground-light-hover: #8a8a8a; */
 
   --foreground-light: #bfbfbf;
   --foreground-light-hover: #b1b1b1;
